implement twitter sdk
- add kill endpoint
- add twitter sdk
- add job to fetch tweets
- add job to remove tweets
- comment api throtteling (temp)

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
+
+FRONTEND_URL="http://localhost:3000"
+
+# generate it with openssl rand -hex 32
+HASHIDS_SALT=
