--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=localhost
 
 MEMCACHED_HOST=127.0.0.1
 
